Update and rename index.html to curriculo-clone.html

--- a/curriculo-clone.html
+++ b/curriculo-clone.html
@@ -268,7 +268,7 @@
                     <td></td>
                 </tr>
             </table>
-            <a href="index.html" class="link">📄 Ver Currículo de Matrícula</a>
+            <a href="curriculo-clone.html" class="link">📄 Ver Currículo de Matrícula</a>
         </div>
 
         <div class="section">
@@ -296,7 +296,7 @@
                         <td colspan="9" style="background-color: #fff8dc; font-weight: bold;">2023/2024, 1º semestre</td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Álgebra Linear</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Álgebra Linear</a></td>
                         <td><span class="status-reprovado">Reprovado (EN)</span></td>
                         <td>RE</td>
                         <td>-</td>
@@ -304,10 +304,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Cálculo Diferencial e Integral I</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Cálculo Diferencial e Integral I</a></td>
                         <td><span class="status-reprovado">Reprovado (EN)</span></td>
                         <td>RE</td>
                         <td>-</td>
@@ -315,10 +315,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Desenho de Construção Naval</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Desenho de Construção Naval</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>15</td>
                         <td>-</td>
@@ -326,10 +326,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Gestão</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Gestão</a></td>
                         <td><span class="status-reprovado">Reprovado (EN)</span></td>
                         <td>RE</td>
                         <td>-</td>
@@ -337,10 +337,10 @@
                         <td>3.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Introdução à Engenharia Naval e Oceânica</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Introdução à Engenharia Naval e Oceânica</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>13</td>
                         <td>-</td>
@@ -348,10 +348,10 @@
                         <td>3.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">N9 - Química Geral</a></td>
+                        <td><a href="curriculo-clone.html" class="link">N9 - Química Geral</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>13</td>
                         <td>-</td>
@@ -359,7 +359,7 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
 
                     <!-- 2023/2024, 2º semestre -->
@@ -367,7 +367,7 @@
                         <td colspan="9" style="background-color: #fff8dc; font-weight: bold;">2023/2024, 2º semestre</td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Cálculo Diferencial e Integral II</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Cálculo Diferencial e Integral II</a></td>
                         <td><span class="status-reprovado">Reprovado (EN)</span></td>
                         <td>RE</td>
                         <td>-</td>
@@ -375,10 +375,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Ciência de Materiais</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Ciência de Materiais</a></td>
                         <td><span class="status-reprovado">Reprovado (EN)</span></td>
                         <td>RE</td>
                         <td>-</td>
@@ -386,10 +386,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Fundamentos da Programação</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Fundamentos da Programação</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>15</td>
                         <td>-</td>
@@ -397,10 +397,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">HASS I (Introdução à Economia)</a></td>
+                        <td><a href="curriculo-clone.html" class="link">HASS I (Introdução à Economia)</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>13</td>
                         <td>Opcional</td>
@@ -408,10 +408,10 @@
                         <td>3.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Mecânica Aplicada I</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Mecânica Aplicada I</a></td>
                         <td><span class="status-reprovado">Reprovado (EN)</span></td>
                         <td>RE</td>
                         <td>-</td>
@@ -419,7 +419,7 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
 
                     <!-- 2024/2025, 1º semestre -->
@@ -427,7 +427,7 @@
                         <td colspan="9" style="background-color: #fff8dc; font-weight: bold;">2024/2025, 1º semestre</td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Álgebra Linear</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Álgebra Linear</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>15</td>
                         <td>-</td>
@@ -435,10 +435,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Cálculo Diferencial e Integral I</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Cálculo Diferencial e Integral I</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>14</td>
                         <td>-</td>
@@ -446,10 +446,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Eletromagnetismo e Óptica</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Eletromagnetismo e Óptica</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>12</td>
                         <td>-</td>
@@ -457,10 +457,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Gestão</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Gestão</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>14</td>
                         <td>-</td>
@@ -468,10 +468,10 @@
                         <td>3.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Matemática Computacional</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Matemática Computacional</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>11</td>
                         <td>-</td>
@@ -479,10 +479,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Mecânica dos Materiais</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Mecânica dos Materiais</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>10</td>
                         <td>-</td>
@@ -490,7 +490,7 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
 
                     <!-- 2024/2025, 2º semestre -->
@@ -498,7 +498,7 @@
                         <td colspan="9" style="background-color: #fff8dc; font-weight: bold;">2024/2025, 2º semestre</td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Arquitectura Naval</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Arquitectura Naval</a></td>
                         <td><span class="status-enrolled">Inscrito (EN)</span></td>
                         <td>-</td>
                         <td>-</td>
@@ -509,7 +509,7 @@
                         <td></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Ciência de Materiais</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Ciência de Materiais</a></td>
                         <td><span class="status-enrolled">Inscrito (EN)</span></td>
                         <td>-</td>
                         <td>-</td>
@@ -520,7 +520,7 @@
                         <td></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Introdução à Mecânica Quântica</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Introdução à Mecânica Quântica</a></td>
                         <td><span class="status-enrolled">Inscrito (EN)</span></td>
                         <td>-</td>
                         <td>-</td>
@@ -531,7 +531,7 @@
                         <td></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Mecânica Aplicada I</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Mecânica Aplicada I</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>14</td>
                         <td>-</td>
@@ -539,10 +539,10 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">0558 - Relatividade</a></td>
+                        <td><a href="curriculo-clone.html" class="link">0558 - Relatividade</a></td>
                         <td><span class="status-enrolled">Inscrito (EN)</span></td>
                         <td>-</td>
                         <td>-</td>
@@ -553,7 +553,7 @@
                         <td></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Tecnologia de Construção Naval</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Tecnologia de Construção Naval</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>12</td>
                         <td>-</td>
@@ -564,7 +564,7 @@
                         <td></td>
                     </tr>
                     <tr class="course-row">
-                        <td><a href="index.html" class="link">Termodinâmica I</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Termodinâmica I</a></td>
                         <td><span class="status-approved">Aprovado (EN)</span></td>
                         <td>13</td>
                         <td>-</td>
@@ -572,7 +572,7 @@
                         <td>6.0</td>
                         <td>EN</td>
                         <td>-</td>
-                        <td><a href="index.html" class="link">Estatísticas</a></td>
+                        <td><a href="curriculo-clone.html" class="link">Estatísticas</a></td>
                     </tr>
                 </tbody>
             </table>
