--- a/avaliacao-anav.html
+++ b/avaliacao-anav.html
@@ -8,7 +8,7 @@
   <link href="https://fenix.tecnico.ulisboa.pt/cms/assets/fenixedu-learning-theme/117a7569aa22b88e/css/publicPages.css" rel="stylesheet">
 </head>
 <body>
- 
+
 <div id="headcounter">
   <div class="container">
     <div class="row" style="padding-top:50px; padding-bottom:25px;">
@@ -39,6 +39,11 @@
         <li>
           <a href="https://mrbeemaia.github.io/NavArch_1MAP60Marks_AY2024to2025_09JUN2025.pdf" download>
             NavArch_1MAP60Marks_AY2024to2025_09JUN2025.pdf
+          </a>
+        </li>
+        <li>
+          <a href="https://mrbeemaia.github.io/NavArch_2MAP60Marks_AY2024to2025_10JUN2025.pdf" download>
+            NavArch_2MAP60Marks_AY2024to2025_10JUN2025.pdf
           </a>
         </li>
       </ul>
